; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_pack-redundant.c_llist_sorted_difference_inplace.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_pack-redundant.c_llist_sorted_difference_inplace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.llist = type { %struct.llist_item* }
%struct.llist_item = type { %struct.llist_item*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.llist*, %struct.llist*)* @llist_sorted_difference_inplace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @llist_sorted_difference_inplace(%struct.llist* %0, %struct.llist* %1) #0 {
  %3 = alloca %struct.llist*, align 8
  %4 = alloca %struct.llist*, align 8
  %5 = alloca %struct.llist_item*, align 8
  %6 = alloca %struct.llist_item*, align 8
  store %struct.llist* %0, %struct.llist** %3, align 8
  store %struct.llist* %1, %struct.llist** %4, align 8
  store %struct.llist_item* null, %struct.llist_item** %5, align 8
  %7 = load %struct.llist*, %struct.llist** %4, align 8
  %8 = getelementptr inbounds %struct.llist, %struct.llist* %7, i32 0, i32 0
  %9 = load %struct.llist_item*, %struct.llist_item** %8, align 8
  store %struct.llist_item* %9, %struct.llist_item** %6, align 8
  br label %10

10:                                               ; preds = %13, %2
  %11 = load %struct.llist_item*, %struct.llist_item** %6, align 8
  %12 = icmp ne %struct.llist_item* %11, null
  br i1 %12, label %13, label %23

13:                                               ; preds = %10
  %14 = load %struct.llist*, %struct.llist** %3, align 8
  %15 = load %struct.llist_item*, %struct.llist_item** %6, align 8
  %16 = getelementptr inbounds %struct.llist_item, %struct.llist_item* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.llist_item*, %struct.llist_item** %5, align 8
  %19 = call %struct.llist_item* @llist_sorted_remove(%struct.llist* %14, i32 %17, %struct.llist_item* %18)
  store %struct.llist_item* %19, %struct.llist_item** %5, align 8
  %20 = load %struct.llist_item*, %struct.llist_item** %6, align 8
  %21 = getelementptr inbounds %struct.llist_item, %struct.llist_item* %20, i32 0, i32 0
  %22 = load %struct.llist_item*, %struct.llist_item** %21, align 8
  store %struct.llist_item* %22, %struct.llist_item** %6, align 8
  br label %10

23:                                               ; preds = %10
  ret void
}

declare dso_local %struct.llist_item* @llist_sorted_remove(%struct.llist*, i32, %struct.llist_item*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
